--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -100,6 +100,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e95ec1b9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "325c8af7",
    "metadata": {},
@@ -175,6 +183,42 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "49265099",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d8dd780",
+   "metadata": {},
+   "source": [
+    "## Genetics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c39e0665",
+   "metadata": {},
+   "source": [
+    "### molecular\n",
+    "- Comprehensive molecular characterization of human colon and rectal cancer - Nature - 2012"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e20b500f",
+   "metadata": {},
+   "source": [
+    "### Immune Evasion\n",
+    "- Genetic Mechanisms of Immune Evasion in Colorectal Cancer - CD - 2018\n",
+    "- [CRC immune hubs](https://portals.broadinstitute.org/crc-immune-hubs/#supplemental-annotations-of-consensus-nmf-gene-programs)\n",
+    "- [Spatially organized multicellular immune hubs in human colorectal cancer](https://www.cell.com/cell/fulltext/S0092-8674(21)00945-4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "350baeef",
    "metadata": {},
    "outputs": [],
    "source": []
