--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -58,6 +58,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "034ce379",
+   "metadata": {},
+   "source": [
+    "### mutations\n",
+    "- Identification of Somatic Mutations From Bulk and Single-Cell Sequencing Data\n",
+    "- SCmut: A method to detect cell-level mutation from single-cell RNA-sequencing\n",
+    "- Somatic mutation landscapes at single-molecule resolution - 2021 - Nature"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b9c83c24",
    "metadata": {},
    "source": [
@@ -212,12 +223,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e76f52eb",
+   "id": "81631fed",
    "metadata": {},
    "source": [
     "#### DESeq2\n",
     "- [Time course analysis with DESeq2](https://hbctraining.github.io/DGE_workshop_salmon_online/lessons/08b_time_course_analyses.html)\n",
-    "- [DEseq2 time-series design](https://support.bioconductor.org/p/62684/)"
+    "- [DEseq2 time-series design](https://support.bioconductor.org/p/62684/)\n",
+    "- [Introduction to DGE - ARCHIVED](https://hbctraining.github.io/DGE_workshop/lessons/08_DGE_LRT.html)"
    ]
   },
   {
@@ -475,9 +487,9 @@
    "id": "27223a43",
    "metadata": {},
    "source": [
-    "## genetic lineage\n",
+    "## lineage\n",
     "\n",
-    "### Example\n",
+    "### lineage inference\n",
     "- reconstruct lineage tree by somatic mutation in cancer\n",
     "- [Reconstructing the Lineage Histories and Differentiation Trajectories of Individual Cancer Cells in Myeloproliferative Neoplasms](https://www.sciencedirect.com/science/article/pii/S1934590921000515)\n",
     "- [Reconstructing mutational lineages in breast cancer by multi-patient-targeted single-cell DNA sequencing](https://www.sciencedirect.com/science/article/pii/S2666979X22001689)\n",
@@ -492,6 +504,18 @@
     "- [Cancer evolution: Darwin and beyond](https://www.embopress.org/doi/full/10.15252/embj.2021108389)\n",
     "- [How cancer shapes evolution, and how evolution shapes cancer](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3660034/)\n",
     "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "183aac42",
+   "metadata": {},
+   "source": [
+    "### lineage tracing\n",
+    "- in silico lineage tracing\n",
+    "- Single-cell multi-omics and lineage tracing to dissect cell fate decision-making - 2023 - Stem Cell Reports\n",
+    "- Lineage tracing meets single-cell omics: opportunities and challenges - review - 2020 - Nature Reviews Genetics\n",
+    "- Connecting past and present: single-cell lineage tracing - PC - 2022"
    ]
   },
   {
@@ -655,19 +679,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f324b4d",
+   "id": "26b35b41",
    "metadata": {},
    "source": [
     "## Advanced tools\n",
     "\n",
     "protein degradation system\n",
+    "- Rapid and direct control of target protein levels with VHL-recruiting dTAG molecules - NC - 2020\n",
+    "- Definition of a small core transcriptional circuit regulated by AML1-ETO - MC - 2021\n",
+    "- Generation of locus-specific degradable tag knock-ins in mouse and human cell lines\n",
     "- Targeted Protein Acetylation in Cells Using Heterobifunctional Molecules"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a78b9235",
+   "id": "a47a9634",
    "metadata": {},
    "outputs": [],
    "source": []
