--- a/docs/source/notebooks/Models.ipynb
+++ b/docs/source/notebooks/Models.ipynb
@@ -5,7 +5,7 @@
    "id": "e82965ef",
    "metadata": {},
    "source": [
-    "# Disease models"
+    "## Disease models"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "973ed955",
    "metadata": {},
    "source": [
-    "## Cell line"
+    "### Cell line"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "5872a998",
    "metadata": {},
    "source": [
-    "## Mouse model"
+    "### Mouse model"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "id": "967304eb",
    "metadata": {},
    "source": [
-    "## Organoid\n",
+    "### Organoid\n",
     "- [Organoids and organs-on-chips: insights into predicting the efficacy of systemic treatment in colorectal cancer - review - Cell Death Discovery - 2023](https://www.nature.com/articles/s41420-023-01354-9)\n",
     "- Lack of a vascular, nervous or immune system is a major disadvantage of organoids."
    ]
@@ -39,7 +39,7 @@
    "id": "8c4e78a9",
    "metadata": {},
    "source": [
-    "## Patient-derived xenograft (PDX)\n",
+    "### Patient-derived xenograft (PDX)\n",
     "- Because of the integrity of PDX microenvironment, it remains the gold standard for verifying drug sensitivity"
    ]
   },
@@ -48,7 +48,7 @@
    "id": "2c3ce565",
    "metadata": {},
    "source": [
-    "## Human sample"
+    "### Human sample"
    ]
   },
   {
