--- a/docs/source/notebooks/Models.ipynb
+++ b/docs/source/notebooks/Models.ipynb
@@ -5,7 +5,7 @@
    "id": "e82965ef",
    "metadata": {},
    "source": [
-    "## Disease models"
+    "# Models"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "973ed955",
    "metadata": {},
    "source": [
-    "### Cell line"
+    "## Cell line"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "id": "5872a998",
    "metadata": {},
    "source": [
-    "### Mouse model"
+    "## Mouse model"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "id": "967304eb",
    "metadata": {},
    "source": [
-    "### Organoid\n",
+    "## Organoid\n",
     "- [Organoids and organs-on-chips: insights into predicting the efficacy of systemic treatment in colorectal cancer - review - Cell Death Discovery - 2023](https://www.nature.com/articles/s41420-023-01354-9)\n",
     "- Lack of a vascular, nervous or immune system is a major disadvantage of organoids."
    ]
@@ -39,7 +39,7 @@
    "id": "8c4e78a9",
    "metadata": {},
    "source": [
-    "### Patient-derived xenograft (PDX)\n",
+    "## Patient-derived xenograft (PDX)\n",
     "- Because of the integrity of PDX microenvironment, it remains the gold standard for verifying drug sensitivity"
    ]
   },
@@ -48,16 +48,8 @@
    "id": "2c3ce565",
    "metadata": {},
    "source": [
-    "### Human sample"
+    "## Human sample"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6587cb0e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -91,7 +83,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "288.391px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
