--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e95ec1b9",
+   "id": "1df47dfe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d8dd780",
+   "id": "02893165",
    "metadata": {},
    "source": [
     "## Genetics"
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c39e0665",
+   "id": "d0f07552",
    "metadata": {},
    "source": [
     "### molecular\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e20b500f",
+   "id": "54d1a946",
    "metadata": {},
    "source": [
     "### Immune Evasion\n",
@@ -218,7 +218,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "350baeef",
+   "id": "956f07f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "453a74df",
+   "metadata": {},
+   "source": [
+    "## Gut Cell Atlas\n",
+    "- [Gut Cell Atlas - Teichlab](https://www.gutcellatlas.org/)\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72ca3839",
    "metadata": {},
    "outputs": [],
    "source": []
