--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -434,7 +434,7 @@
    "id": "b8e07478",
    "metadata": {},
    "source": [
-    "#### STREAM"
+    "### STREAM"
    ]
   },
   {
@@ -452,7 +452,7 @@
    "id": "e26da3ce",
    "metadata": {},
    "source": [
-    "#### SCENIC+\n",
+    "### SCENIC+\n",
     "- https://scenicplus.readthedocs.io/en/latest/\n",
     "- `conda install -c bioconda macs2` # pip install has error\n",
     "\n",
@@ -468,10 +468,22 @@
    "id": "1e8ea5d8",
    "metadata": {},
    "source": [
-    "#### cistrome toolbox\n",
+    "### cistrome toolbox\n",
     "- http://cistrome.org/BETA/\n",
     "- https://bioconductor.org/packages/devel/bioc/html/FindIT2.html\n",
     "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb1720ba",
+   "metadata": {},
+   "source": [
+    "### Differential gene network analysis [low]\n",
+    "- Differential network analysis by simultaneously considering changes in gene interactions and gene expression\n",
+    "- Integrating gene regulatory pathways into differential network analysis of gene expression data\n",
+    "- BioNetStat: A Tool for Biological Networks Differential Analysis\n",
+    "- Single-Cell Differential Network Analysis with Sparse Bayesian Factor Models"
    ]
   },
   {
@@ -726,9 +738,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
+   "display_name": "R 4.1",
    "language": "R",
-   "name": "ir"
+   "name": "ir41"
   },
   "language_info": {
    "codemirror_mode": "r",
