--- a/docs/source/notebooks/theme-based/lineage-plasticity-overview.ipynb
+++ b/docs/source/notebooks/theme-based/lineage-plasticity-overview.ipynb
@@ -154,6 +154,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a2394b19",
+   "metadata": {},
+   "source": [
+    "## 一些想法\n",
+    "- 想深入plasticity就必须做lineage tracing，因为无论你怎么定义plasticity，最终都会涉及到cell type之间的相互转换。所以，这里计算的方法是不可能代替金标准的，必须做tracing。\n",
+    "- 第一个问题就是，AbSc是从哪里出来的，可能是de-diff，也可能是ISC被block diff了，这个问题重要吗？不知道，但不同的mutation在不同的context下是有不同效力的，所以AbSc的来源可能是非常diverse的，如果你随机引入human里的一些mutation。知道了，解析异质性是精准医疗的必经之路。\n",
+    "\n",
+    "实验方法：\n",
+    "- CRC的遗传信息已经非常全面了，那些chosen ones的mutation和RNA-seq信息都非常全面，我们可以先做一个初筛，建立各种可能得组合；\n",
+    "- 我想在Organoid里结合perturb-seq做一个筛选，了解在不同遗传突变下cell lineage直接是如何相互转化了，确定AbSc起源的多样性，以及潜在的保守性，寻找通用的靶点；\n",
+    "- 一旦AbSc开始积累，其边进入了快速的evolution车道，结构丢失，迅速积累突变，一切都是为了适应环境；\n",
+    "- 最终本地的资源已经不够支持其无限增殖，其便通过metastasis去其他地方寻找新的能源，这是通过CTC来实现的；"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0867cf35",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "54a18ee2",
