--- a/docs/source/notebooks/theme-based/lineage-tracing.ipynb
+++ b/docs/source/notebooks/theme-based/lineage-tracing.ipynb
@@ -57,6 +57,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "086ccd70",
+   "metadata": {},
+   "source": [
+    "### in vivo tracing\n",
+    "- Lineage tracing reveals the phylodynamics, plasticity, and paths of tumor evolution - cell - 2022"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "522e03c4",
    "metadata": {},
    "source": [
@@ -114,6 +123,21 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "5e26f075",
+   "metadata": {},
+   "source": [
+    "## 我的想法\n",
+    "- 细胞是必须被标记的，否则测序后就无法识别，只能通过barcode；\n",
+    "- 标记后，让其自我复制几次，增殖复制，然后利用化学诱导的处理taxomin，随机诱导一部分，或者控制性诱导一半的细胞，切除多余的一部分，使得后代可以与亲代分开，但同时也可以追踪；\n",
+    "- 一一追踪是不可能的，这种bulk的追踪是可解读的；\n",
+    "\n",
+    "- 目前最大的技术瓶颈，测序意味着破坏，细胞的生命周期就被终结，目前只能用旁系来做对照，这对tracing来说也是一样；\n",
+    "\n",
+    "- 或者设计特定cell type的barcode，比如只要marker基因表达，barcode就会被剪切。"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "31bdcd2f",
@@ -145,7 +169,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "266.188px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
