--- a/docs/source/notebooks/Models.ipynb
+++ b/docs/source/notebooks/Models.ipynb
@@ -10,6 +10,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0d7ee3f1",
+   "metadata": {},
+   "source": [
+    "## Basis of CRC\n",
+    "- 任何model都必须从人的疾病特征出发\n",
+    "- APC TP53 KRAS model\n",
+    "- Mutations in APC, Kirsten-ras, and p53—alternative genetic pathways to colorectal cancer - PNAS - 2002\n",
+    "- Targeting mutant p53 for cancer therapy: direct and indirect strategies - Review - 2021"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "973ed955",
    "metadata": {},
    "source": [
