--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -31,7 +31,9 @@
     "- dynamo\n",
     "- Cicero\n",
     "- HGC (Hierarchical Graph-based Clustering)\n",
-    "\n",
+    "- cellrank\n",
+    "- VIA: https://github.com/ShobiStassen/VIA\n",
+    "- ForceAtlas2 is a force directed layout\n",
     "\n",
     "- SCENT (https://mp.weixin.qq.com/s/VvxExACrvWYyjClT2ajldw)\n",
     "- FitDevo (https://mp.weixin.qq.com/s/pFrl54QkV_p-swzYKYY1HA)\n",
