--- a/docs/source/notebooks/NGS.ipynb
+++ b/docs/source/notebooks/NGS.ipynb
@@ -57,12 +57,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "730703f0",
+   "cell_type": "markdown",
+   "id": "1461c995",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- 4 slices - $17k (~4k for each slice)\n",
+    "- 3 other backup slices for each (thickness: 1 cell ~ 2 slices)\n",
+    "- https://www.10xgenomics.com/spatial-transcriptomics\n",
+    "- FFPE fixed\n",
+    "- key QC: 对切片中的RNA进行RIN值检测，保证其质量\n",
+    "- key problem: low attachment\n",
+    "\n",
+    "参考：\n",
+    "- [什么样的组织样本可以开展10x Visium空间转录组研究？| 空间转录组专题](https://mp.weixin.qq.com/s/yrkW0EAmLCKIqf2rYxjoVQ)\n",
+    "- [技术介绍| 空间转录组-动植物样品采集](https://mp.weixin.qq.com/s/YQKGfAVUPL80wkCjGykFfw)\n",
+    "- [技术介绍| 空间转录组-实验细则](https://mp.weixin.qq.com/s/Kl3RT9wjjpgq3z_8HXBadg)"
+   ]
   },
   {
    "cell_type": "markdown",
