--- a/docs/source/notebooks/ModelExp.ipynb
+++ b/docs/source/notebooks/ModelExp.ipynb
@@ -5,7 +5,7 @@
    "id": "e82965ef",
    "metadata": {},
    "source": [
-    "# Models"
+    "# ModelExp"
    ]
   },
   {
@@ -22,10 +22,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d59f6d72",
+   "metadata": {},
+   "source": [
+    "## Disease models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "973ed955",
    "metadata": {},
    "source": [
-    "## Cell line"
+    "### Cell line"
    ]
   },
   {
@@ -33,7 +41,7 @@
    "id": "5872a998",
    "metadata": {},
    "source": [
-    "## Mouse model"
+    "### Mouse model"
    ]
   },
   {
@@ -41,7 +49,7 @@
    "id": "967304eb",
    "metadata": {},
    "source": [
-    "## Organoid\n",
+    "### Organoid\n",
     "- [Organoids and organs-on-chips: insights into predicting the efficacy of systemic treatment in colorectal cancer - review - Cell Death Discovery - 2023](https://www.nature.com/articles/s41420-023-01354-9)\n",
     "- Lack of a vascular, nervous or immune system is a major disadvantage of organoids."
    ]
@@ -51,7 +59,7 @@
    "id": "8c4e78a9",
    "metadata": {},
    "source": [
-    "## Patient-derived xenograft (PDX)\n",
+    "### Patient-derived xenograft (PDX)\n",
     "- Because of the integrity of PDX microenvironment, it remains the gold standard for verifying drug sensitivity"
    ]
   },
@@ -60,8 +68,49 @@
    "id": "2c3ce565",
    "metadata": {},
    "source": [
-    "## Human sample"
+    "### Human sample"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6abcd65a",
+   "metadata": {},
+   "source": [
+    "## Exprimental approaches\n",
+    "- [Cancer实验系列 | 开篇 | Molecular cloning | 分子克隆](https://www.cnblogs.com/leezx/p/17150023.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ca6c8ba",
+   "metadata": {},
+   "source": [
+    "### RT-PCR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b416dfd1",
+   "metadata": {},
+   "source": [
+    "### WB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb26f200",
+   "metadata": {},
+   "source": [
+    "### Co-IP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e53977c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
