--- a/docs/source/notebooks/Databases.ipynb
+++ b/docs/source/notebooks/Databases.ipynb
@@ -65,6 +65,15 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "96f216b3",
+   "metadata": {},
+   "source": [
+    "#### Circulating Cell-free Genome Atlas\n",
+    "- https://grail.com/clinical-studies/ccga-study/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0b56e561",
@@ -89,6 +98,14 @@
     "- [Meta-Analysis of Human Cancer Single-Cell RNA-Seq Datasets Using the IMMUcan Database](https://doi.org/10.1158/0008-5472.CAN-22-0074)\n",
     "- https://immucanscdb.vital-it.ch/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ad3bcc6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
