--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -250,6 +250,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fedafa1b",
+   "metadata": {},
+   "source": [
+    "## multi-omics\n",
+    "- Methods and applications for single-cell and spatial multi-omics - 2023\n",
+    "- How single-cell multi-omics builds relationships\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a1329f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d94b0622",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "d0b4056b",
    "metadata": {},
    "source": [
