--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -129,12 +129,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31cd3bbf",
+   "cell_type": "markdown",
+   "id": "b644a5e9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### ChromHMM\n",
+    "- unsupervised classification of chromatin state\n",
+    "- [Chromatin-state discovery and genome annotation with ChromHMM](https://www.nature.com/articles/nprot.2017.124)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -554,6 +556,15 @@
    "metadata": {},
    "source": [
     "### Spatial transcriptomics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b3cab4d",
+   "metadata": {},
+   "source": [
+    "#### CytoSPACE\n",
+    "- High-resolution alignment of single-cell and spatial transcriptomes with CytoSPACE"
    ]
   },
   {
