--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3eb1e038",
+   "id": "3f05ada2",
    "metadata": {},
    "source": [
     "# ToolDev"
@@ -10,28 +10,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2958df6",
+   "id": "d338101b",
    "metadata": {},
    "source": [
-    "## BT2M\n",
+    "## Comp tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ee43734",
+   "metadata": {},
+   "source": [
+    "### BT2M\n",
     "- A tool about feature module identification in single-cell data"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "83900270",
+   "id": "2fa135fe",
    "metadata": {},
    "source": [
-    "## CRAIP\n",
+    "### CRAIP\n",
     "- A tool about causal GRN inference"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "1d6eb87a",
+   "id": "2f03194c",
    "metadata": {},
    "source": [
-    "## inferGEX\n",
+    "### inferGEX\n",
     "- A tool about gene expression prediction based on epigenetic and DNA-binding protein\n",
     "- Working model: transcription is a key stop, it's determined by epigenetic features and DBP function\n",
     "- GEX是无法绕开的层级，也是表观层级的体现，GEX能解释大部分的phenotype的variation，其下游的也很重要，但目前我们暂时忽略\n",
@@ -57,9 +65,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c61f9048",
+   "metadata": {},
+   "source": [
+    "### Epigenetic\n",
+    "- Epigenetic tools (The Writers, The Readers and The Erasers) and their implications in cancer therapy - European Journal of Pharmacology - 2018\n",
+    "- HDAC是什么角色？Erasers？\n",
+    "- HDACs are erasers — they remove acetyl groups from histone proteins, resulting in increased expression of associated genes.\n",
+    "- [EPIGENETICS: WRITING, READING, & ERASING](https://weekly.biotechprimer.com/epigenetics-writing-reading-erasing/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c04c81cb",
+   "metadata": {},
+   "source": [
+    "## Exp tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d56b9cac",
+   "metadata": {},
+   "source": [
+    "### Direct cut&run\n",
+    "- Method 1: keep DNA-protein, exclude protein-protein interactions [diffcult to remove PPI]\n",
+    "- Method 2: Predict candidate PPI, using other antibody to filter [much easy]\n",
+    "- Method 3: Using general histone antibody to pull down indirect interaction [much easy]\n",
+    "- An optimized two-step chromatin immunoprecipitation protocol to quantify the associations of two separate proteins and their common target DNA - STAR Protoc - 2021\n",
+    "- [Any suggestions on how to break protein aggregation?](https://www.researchgate.net/post/Any-suggestions-on-how-to-break-protein-aggregation#:~:text=Adding%20salt%20so%20prevent%20protein,or%20glutamate%20in%20mM%20concentrations.)\n",
+    "- 原则：直接抓会比global block简单很多，cross-link比unlink简单；"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78428cbc",
+   "id": "7bb13797",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d45815ee",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -88,7 +138,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "278.188px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
