--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -71,6 +71,7 @@
    "source": [
     "### Epigenetic\n",
     "- Epigenetic tools (The Writers, The Readers and The Erasers) and their implications in cancer therapy - European Journal of Pharmacology - 2018\n",
+    "- Writing, erasing and reading histone lysine methylations - 2017\n",
     "- HDAC是什么角色？Erasers？\n",
     "- HDACs are erasers — they remove acetyl groups from histone proteins, resulting in increased expression of associated genes.\n",
     "- [EPIGENETICS: WRITING, READING, & ERASING](https://weekly.biotechprimer.com/epigenetics-writing-reading-erasing/)"
