--- a/docs/source/notebooks/ModelExp.ipynb
+++ b/docs/source/notebooks/ModelExp.ipynb
@@ -41,7 +41,12 @@
    "id": "5872a998",
    "metadata": {},
    "source": [
-    "### Mouse model"
+    "### Mouse model\n",
+    "\n",
+    "#### Lgr5-EGFP-IRES-creERT2\n",
+    "- jax lab lgr5 egfp cre\n",
+    "- https://www.jax.org/strain/008875\n",
+    "- Identification of stem cells in small intestine and colon by marker gene Lgr5 - Nature - 2007"
    ]
   },
   {
