--- a/docs/source/notebooks/ModelExp.ipynb
+++ b/docs/source/notebooks/ModelExp.ipynb
@@ -46,7 +46,9 @@
     "#### Lgr5-EGFP-IRES-creERT2\n",
     "- jax lab lgr5 egfp cre\n",
     "- https://www.jax.org/strain/008875\n",
-    "- Identification of stem cells in small intestine and colon by marker gene Lgr5 - Nature - 2007"
+    "- Identification of stem cells in small intestine and colon by marker gene Lgr5 - Nature - 2007\n",
+    "- 300 dollars per mice\n",
+    "- Figure 1C - [Aberrant cell state plasticity mediated by developmental reprogramming precedes colorectal cancer initiation](https://www.biorxiv.org/content/10.1101/2022.09.22.509032v2)"
    ]
   },
   {
