--- a/docs/source/notebooks/More.ipynb
+++ b/docs/source/notebooks/More.ipynb
@@ -10,6 +10,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5e280acd",
+   "metadata": {},
+   "source": [
+    "## Drug"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b902dd2",
+   "metadata": {},
+   "source": [
+    "### epigenetic drug discovery\n",
+    "- The timeline of epigenetic drug discovery: from reality to dreams - Review - 2019\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62ae38ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "28343e8d",
    "metadata": {},
    "source": [
