--- a/docs/source/notebooks/NGS.ipynb
+++ b/docs/source/notebooks/NGS.ipynb
@@ -163,6 +163,39 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "5deac4dd",
+   "metadata": {},
+   "source": [
+    "## Chem-seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0a7ed09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb986a7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2a54eeb",
+   "metadata": {},
+   "source": [
+    "## cfDNA\n",
+    "- [Epigenetic analysis for early cancer detection](https://www.nature.com/articles/d42473-020-00273-y#ref-CR2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5c59e409",
