--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -72,6 +72,10 @@
     "### Epigenetic\n",
     "- Epigenetic tools (The Writers, The Readers and The Erasers) and their implications in cancer therapy - European Journal of Pharmacology - 2018\n",
     "- Writing, erasing and reading histone lysine methylations - 2017\n",
+    "- Regulation of chromatin by histone modifications - review - 2011\n",
+    "- Collective regulation of chromatin modifications predicts replication timing during cell cycle - Cell Reports - 2021\n",
+    "\n",
+    "\n",
     "- HDAC是什么角色？Erasers？\n",
     "- HDACs are erasers — they remove acetyl groups from histone proteins, resulting in increased expression of associated genes.\n",
     "- [EPIGENETICS: WRITING, READING, & ERASING](https://weekly.biotechprimer.com/epigenetics-writing-reading-erasing/)"
