--- a/docs/source/notebooks/Datasets.ipynb
+++ b/docs/source/notebooks/Datasets.ipynb
@@ -11,6 +11,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7137e64f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "162f5042",
+   "metadata": {},
+   "source": [
+    "## epigenomic\n",
+    "- Integrative pan cancer analysis reveals epigenomic variation in cancer type and cell specific chromatin domains - NC - 2021"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d2bb7760",
    "metadata": {},
    "outputs": [],
