--- a/docs/source/notebooks/NGS.ipynb
+++ b/docs/source/notebooks/NGS.ipynb
@@ -5,7 +5,153 @@
    "id": "d077d9aa",
    "metadata": {},
    "source": [
-    "# NGS"
+    "# NGS-Multiomics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffd89c92",
+   "metadata": {},
+   "source": [
+    "## DNA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce9170e1",
+   "metadata": {},
+   "source": [
+    "### cfDNA\n",
+    "- [Epigenetic analysis for early cancer detection](https://www.nature.com/articles/d42473-020-00273-y#ref-CR2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1358866",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50cc04fd",
+   "metadata": {},
+   "source": [
+    "## Epigenetic\n",
+    "- [Transcriptional enhancers: from properties to genome-wide predictions](https://www.nature.com/articles/nrg3682) - Nature Reviews Genetics - 2014"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29f920ae",
+   "metadata": {},
+   "source": [
+    "### ChIP-seq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6665a8ad",
+   "metadata": {},
+   "source": [
+    "### ATAC-seq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c870e2a6",
+   "metadata": {},
+   "source": [
+    "### CUT&RUN\n",
+    "- Experiment: Genome wide binding of SOX9 in Normal and Adenoma organoids\n",
+    "- Kit: EpiCypher CUTANA ChIC/CUT&RUN Kit\n",
+    "- https://www.epicypher.com/products/epigenetics-reagents-and-assays/cutana-chic-cut-and-run-kit\n",
+    "- Library preparation: NEB Ultra DNA library preparation Kit\n",
+    "- https://www.neb.com/products/e7370-nebnext-ultra-dna-library-prep-kit-for-illumina#Product%20Information\n",
+    "- Sequencing: Illumina 3M reads/sample\n",
+    "\n",
+    "#### Type\n",
+    "- IgG\n",
+    "- Spike-In\n",
+    "- TF\n",
+    "- Histone\n",
+    "\n",
+    "#### Main problem\n",
+    "- quality of TF, evaluated by mapping rate\n",
+    "- quality of replicate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a25da762",
+   "metadata": {},
+   "source": [
+    "### Chem-seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d4ee48c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01547a19",
+   "metadata": {},
+   "source": [
+    "## Transcription"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b80c87d",
+   "metadata": {},
+   "source": [
+    "### Bulk RNA-seq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f18b34b4",
+   "metadata": {},
+   "source": [
+    "### 10x single-cell RNA-seq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c44f40b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bddf9360",
+   "metadata": {},
+   "source": [
+    "## Protein"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97bdc04c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ec0199f",
+   "metadata": {},
+   "source": [
+    "## Metabolite"
    ]
   },
   {
@@ -18,26 +164,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64bd5559",
+   "id": "b70338df",
    "metadata": {},
    "source": [
-    "## 10x single-cell RNA-seq"
+    "## multi-omics"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49a7cbb8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "id": "028d37fc",
    "metadata": {},
    "source": [
-    "## 10x multi-omics seq"
+    "### 10x multi-omics seq"
    ]
   },
   {
@@ -75,14 +213,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0ef668a1",
-   "metadata": {},
-   "source": [
-    "## Bulk RNA-seq"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e20b8367",
@@ -99,44 +229,12 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "8ac5d644",
-   "metadata": {},
-   "source": [
-    "## CUT&RUN\n",
-    "- Experiment: Genome wide binding of SOX9 in Normal and Adenoma organoids\n",
-    "- Kit: EpiCypher CUTANA ChIC/CUT&RUN Kit\n",
-    "- https://www.epicypher.com/products/epigenetics-reagents-and-assays/cutana-chic-cut-and-run-kit\n",
-    "- Library preparation: NEB Ultra DNA library preparation Kit\n",
-    "- https://www.neb.com/products/e7370-nebnext-ultra-dna-library-prep-kit-for-illumina#Product%20Information\n",
-    "- Sequencing: Illumina 3M reads/sample\n",
-    "\n",
-    "### Type\n",
-    "- IgG\n",
-    "- Spike-In\n",
-    "- TF\n",
-    "- Histone\n",
-    "\n",
-    "### Main problem\n",
-    "- quality of TF, evaluated by mapping rate\n",
-    "- quality of replicate"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e9f855e9",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0a262976",
-   "metadata": {},
-   "source": [
-    "## Bulk ATAC-seq"
-   ]
   },
   {
    "cell_type": "code",
@@ -147,28 +245,12 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "f5ccde41",
-   "metadata": {},
-   "source": [
-    "## ChIP-seq"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d8113f46",
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5deac4dd",
-   "metadata": {},
-   "source": [
-    "## Chem-seq"
-   ]
   },
   {
    "cell_type": "code",
@@ -185,15 +267,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d2a54eeb",
-   "metadata": {},
-   "source": [
-    "## cfDNA\n",
-    "- [Epigenetic analysis for early cancer detection](https://www.nature.com/articles/d42473-020-00273-y#ref-CR2)"
-   ]
   },
   {
    "cell_type": "code",
