--- a/docs/source/notebooks/Toolbox.ipynb
+++ b/docs/source/notebooks/Toolbox.ipynb
@@ -305,6 +305,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6740475a",
+   "metadata": {},
+   "source": [
+    "#### Splicing\n",
+    "- Specific splice junction detection in single cells with SICILIAN - GB - 2021\n",
+    "- The SpliZ generalizes ‘percent spliced in’ to reveal regulated splicing at single-cell resolution - NM - 2022\n",
+    "- RNA splicing programs define tissue compartments and cell types at single-cell resolution - eLife - 2021\n",
+    "- Single-cell multi-omics defines the cell-type specific impact of splicing aberrations in human hematopoietic clonal outgrowths - 2022"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "17819c3f",
