--- a/docs/source/notebooks/theme-based/ToolDev.ipynb
+++ b/docs/source/notebooks/theme-based/ToolDev.ipynb
@@ -66,6 +66,98 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e974746",
+   "metadata": {},
+   "source": [
+    "#### Deep learning\n",
+    "\n",
+    "序列预测chromatin state：\n",
+    "- 非常简单的想法，模型也非常简单！\n",
+    "- DeepSEA: Predicting effects of noncoding variants with deep learning–based sequence model - NM - 2015\n",
+    "- [Deep Learning & Computational Biology: DeepSEA](https://mp.weixin.qq.com/s/_5l-pj-aaBSyHdOY2eyJfA)\n",
+    "- PlantDeepSEA: PlantDeepSEA, a deep learning-based web service to predict the regulatory effects of genomic variants in plants - NAR - 2021\n",
+    "- Selene: a PyTorch-based deep learning library for sequence data - NM - 2019\n",
+    "\n",
+    "自选的一些特征预测基因相对表达量：\n",
+    "- ATAC的划分\n",
+    "- motif的出现\n",
+    "- co-factor\n",
+    "- 预测基因的相对表达量\n",
+    "\n",
+    "参考：\n",
+    "- Joint profiling of chromatin accessibility and gene expression in thousands of single cells\n",
+    "- Prediction of single-cell gene expression for transcription factor analysis\n",
+    "- Predicting cell-type–specific gene expression from regions of open chromatin\n",
+    "- A deep generative model for multi-view profiling of single-cell RNA-seq and ATAC-seq data\n",
+    "- Single cell transcriptional and chromatin accessibility profiling redefine cellular heterogeneity in the adult human kidney\n",
+    "- CoRE-ATAC: A deep learning model for the functional classification of regulatory elements from single cell and bulk ATAC-seq data\n",
+    "- DeepCpG: accurate prediction of single-cell DNA methylation states using deep learning\n",
+    "- https://deepcpg.readthedocs.io/en/latest/\n",
+    "- [Google发布DeepVariant开源版本，准确性提升50% | 八款基因组学AI工具解读](https://mp.weixin.qq.com/s/dtu0n7zckgCgwh6AdUPm6g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdb085e0",
+   "metadata": {},
+   "source": [
+    "文献：\n",
+    "- Computational inference of cancer-specific vulnerabilities in clinical samples - 2020 - GB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b988f1c6",
+   "metadata": {},
+   "source": [
+    "### deepGEX"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3883698",
+   "metadata": {},
+   "source": [
+    "#### cell type specific GRN and in silico perturbation\n",
+    "References看有没有人已经做了：\n",
+    "- DeepDRIM: a deep neural network to reconstruct cell-type-specific gene regulatory network using single-cell RNA-seq data - BIB - 2021\n",
+    "- scBERT as a large-scale pretrained deep language model for cell type annotation of single-cell RNA-seq data - NMI - 2022\n",
+    "- scGNN is a novel graph neural network framework for single-cell RNA-Seq analyses - NC - 2021\n",
+    "- Learning Cell-Type-Specific Gene Regulation Mechanisms by Multi-Attention Based Deep Learning With Regulatory Latent Space - 2020 - frontier\n",
+    "- Applications of deep learning in understanding gene regulation - reivew - 2023\n",
+    "- scGRNom: a computational pipeline of integrative multi-omics analyses for predicting cell-type disease genes and regulatory networks - GM - 2021\n",
+    "- Deep learning for inferring gene relationships from single-cell expression data - PNAS - 2019\n",
+    "- Applications of deep learning in understanding gene regulation - CRM - 2023"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "494484fc",
+   "metadata": {},
+   "source": [
+    "key steps:\n",
+    "- [How to choose the number of hidden layers and nodes in a feedforward neural network?](https://stats.stackexchange.com/questions/181/how-to-choose-the-number-of-hidden-layers-and-nodes-in-a-feedforward-neural-netw)\n",
+    "- [How to Configure the Number of Layers and Nodes in a Neural Network](https://machinelearningmastery.com/how-to-configure-the-number-of-layers-and-nodes-in-a-neural-network/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15561d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cfd2267",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c61f9048",
    "metadata": {},
    "source": [
